--- a/src/components/style/card.css
+++ b/src/components/style/card.css
@@ -3,7 +3,7 @@
     --dark-text-color:#333;
     --bg-black-color:#15161D;
     --white-text-color:#FFF;
-    --font-family:"popins",sans-serif;
+    --font-family:Poppins,sans-serif;
     --box-shadow:box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
