--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -3,7 +3,7 @@
     --dark-text-color: #333;
     --bg-black-color: #1E1F29;
     --white-text-color: #FFF;
-    --font-family: "popins", sans-serif;
+    --font-family:Poppins,sans-serif;
     --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     --border: rgba(0,0,0,.1);
 
