--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -27,7 +27,7 @@ header .navbar.trans_sticky {
 
 header .navbar.sticky {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     top: 0;
     transition: 0.5s;
     transform: translateY(0%);
