--- a/src/components/style/card.css
+++ b/src/components/style/card.css
@@ -5,6 +5,7 @@
     --white-text-color:#FFF;
     --font-family:Poppins,sans-serif;
     --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    --border: rgba(0,0,0,.1);
 
 }
 
@@ -42,6 +43,8 @@ transition: all 0.4s;
 .product_cart .main_top_card{
     text-transform: capitalize;
     position: relative;
+
+    
 }
 .product_cart .main_top_card .discoutn_action{
     text-transform: capitalize;
@@ -53,6 +56,12 @@ transition: all 0.4s;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    left: 25px;
+    top: 40px;
+    color: #fff;
+    z-index: 10;
+    transform: rotateZ(45deg);
 }
 .product_cart .main_top_card .discoutn_action::before{
     content: "";
@@ -77,6 +86,7 @@ transition: all 0.4s;
 width: 150px;
 text-align: center;
 transition: all 0.4s;
+padding: 12px;
 
 }
 .product_cart .card_box_main:hover .img img{
@@ -88,6 +98,18 @@ transition: all 0.4s;
     text-transform: capitalize;
     color: var(--dark-text-color);
     font-weight: 500;
+    padding: 10px;
+   position: relative;
+}
+.product_cart .card_box_main .card_body::before{
+    content: "";
+    position: absolute;
+    background-color: var(--border);
+    left: 0;
+    width: 100%;
+    top: 20px;
+    height: 2px;
+    margin-bottom: 10px;
 }
 .product_cart .card_box_main .card_body .cart_title{
     margin: 10px 0px;
@@ -123,6 +145,9 @@ transition: all 0.4s;
     transition: all 0.4s;
 }
 
+.product_cart .dropdown-menu .dropdown-item{
+    cursor: pointer;
+}
 
 /*👉.card_product {
     z-index: 1;
