--- a/src/components/style/about.css
+++ b/src/components/style/about.css
@@ -304,3 +304,35 @@ transition: all 300ms ease;
 background-color: #191e34;
 color: #ffffff
 }
+
+
+.carousel-control-next-icon {
+  
+    background:var(--main-bg-color);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.carousel-control-prev-icon {
+    background:var(--main-bg-color);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-control-prev-icon::before{
+    content: "\27A4";
+    transform: rotate(180deg);
+    font-size: 15px;
+
+}
+.carousel-control-next-icon::before{
+    content: "\27A4";
+    font-size: 15px;
+}
