--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -13,6 +13,12 @@
     padding: 0;
     margin: 0;
 }
+body{
+    overflow-x: hidden;
+}
+html{
+    overflow-x: hidden;
+}
 /* this is header styling */
 header .navbar {
     background-color: hsl(233, 16%, 10%);
@@ -113,7 +119,104 @@ header .navbar li a:hover::before {
 header .navbar-expand-lg {
     gap: 30px;
 }
+header .mobile_header{
+   
+    text-transform: capitalize;
+}
+header #mobile_header{
+    background-color: var(--white-text-color);
+  
 
+}
+header .mobile_header .top_bar_header{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    width: 100%;
+    padding: 10px 20px;
+    border-bottom: 1px solid var(--main-bg-color);
+  
+}
+header .mobile_header .top_bar_header .brand_logo img{
+    width: 150px;
+    cursor: pointer;
+    
+}
+header .mobile_header .top_bar_header .open_bootm_header .icon{
+    font-size: 30px;
+    color: var(--main-bg-color);
+    text-align: end;
+    cursor: pointer;
+}
+header .mobile_header .top_bar_header .open_bootm_header{ 
+display: flex;
+justify-content: end;
+align-items: center;
+}
+
+.bottom_header{
+    background-color: var(--white-text-color);
+    border: 1px solid var(--border);
+    box-shadow: var(--box-shadow);
+    padding: 30px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    position: fixed;
+    width: 100vw;
+    bottom: -2px;
+    z-index: 10;
+   
+}
+.bottom_header .box_bottom_box{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+.bottom_header .box_bottom_box .icon{
+    text-align: end;
+    font-size: 20px;
+  background-color: var(--main-bg-color);
+  color: var(--white-text-color);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: var(--box-shadow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom_header .box_bottom_box .left{
+    text-align: end;
+    display: flex;
+    justify-content: end;
+}
+.bottom_header .box_bottom_box .navbar-nav li a{
+    display: flex;
+    
+    gap: 20px;
+    margin-top: 10px;
+}
+.bottom_header .box_bottom_box .navbar-nav li a span{
+
+    color: var(--main-bg-color);
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: cursive;
+}
+.mobile_header .bottom_header{
+    transform: translateY(100%);
+    transition: 0.4s ease-in-out;
+}
+.mobile_header.active .bottom_header{
+    transition: 0.4s ease-in-out;
+    transform: translateY(0px);
+}
+.mobile_header .box_mobile_box{
+    position: fixed;
+    top: 0;
+    z-index: 200;
+    background: var(--white-text-color);
+    width: 100vw;
+}
 /* footer styling css */
 
 #noauth {
@@ -266,4 +369,37 @@ textarea{
     border-color: var(--main-bg-color);
     box-shadow: none;
     outline: none;
+}
+
+
+.slick-dots li button::before{
+    content: "";
+}
+.slick-dots li button {
+    font-size: 6px;
+    line-height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+    border-radius: 50px;
+    content: '';
+    text-align: center;
+    opacity: 1;
+background-color: var(--border);
+   width: 5px;
+   height: 2px;
+}
+
+.slick-dots li {
+    width: 20px;
+    height: 2px;
+    border-radius: 10px;
+}
+.slick-dots li.slick-active button{
+    background-color: var(--main-bg-color);
+    width: 40px;
+    height: 2px;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out;
 }
