--- a/src/components/style/contact.css
+++ b/src/components/style/contact.css
@@ -40,7 +40,7 @@ position: relative;
     color: var(--main-bg-color);
     font-family: var(--font-family);
     font-weight: 700;
-    font-size: 15px;
+
     text-transform: capitalize;
 }
 
@@ -48,4 +48,42 @@ position: relative;
     background-color: var(--border);
     height: 45px;
     border-radius: 20px;
+}
+.conatct_form .form_group{
+    margin: 10px 0px;
+}
+
+form-control.is-valid, .was-validated .form-control:valid {
+ 
+    padding-right: calc(1.5em + 0.75rem);
+    box-shadow: none;
+    outline: none;
+
+}
+.conatct_form .text_area{
+    max-height: 200px;
+    max-height: 200px;
+    height: 200px;
+}
+.form-control.is-invalid:focus, .was-validated .form-control:invalid:focus {
+    box-shadow: none;
+    outline: none;
+    border-color: var(--main-bg-color) !important;
+}
+
+.form-control.is-valid:focus, .was-validated .form-control:valid:focus {
+    box-shadow: none;
+    outline: none;
+    border-color: var(--main-bg-color) !important;
+}
+
+.form-check-input:checked {
+    background-color: var(--main-bg-color) !important;
+    border-color: #FFF !important;
+    outline: none;
+    box-shadow: none;
+}
+.form-check-input:checked[type=checkbox]{
+    outline: none;
+    box-shadow: none;
 }
