--- a/src/components/admin_area/style.css
+++ b/src/components/admin_area/style.css
@@ -12,32 +12,305 @@
      box-sizing: border-box;
 
 } 
-
+aside header .navbar{
+     padding-left: 40px;
+     padding-right: 40px;
+     position: fixed;
+     top: 0;
+     width: 100%;
+     z-index: 100;
+}
+aside header .navbar .brand_logo img{
+     width: 100px;
+}
 aside .sidebar{
 width: 200px;
-background-color:var(--main-bg-color);
+background-color:var(--dark-text-color);
 color: #FFF;
-padding: 20px;
+padding: 80px 20px 20px 20px;
 text-transform: capitalize;
 position: fixed;
 height: 100vh;
+transition: all 0.4s ease-in-out;
+transform: translateX(0px);
+top: 20px;
+
 }
 
-.navbar_pills{
-     display: contents;
+aside .sidebar.active{
+     transform: translateX(-100%);
 }
-.menu-side{
+header .box_of_dashbord{
+     background-color: var(--main-bg-color);
+     color: var(--white-text-color);
+     width: 40px;
+     height: 40px;
      display: flex;
-     margin: 10px 0px;
+     justify-content: center;
+     align-items: center;
+     border-radius: 50%;
+     border: 1px solid var(--bg-black-color);
+     cursor: pointer;
+     
+}
+header  .navul{
+     display: flex;
+     gap: 20px;
+}
+aside .sidebar .navbar_pills{
+     display: flex;
+     padding-left: 10px;
+     overflow-y: auto;
+}
+aside .sidebar .menu-side{
+     display: flex;
+   margin-top: 8px;
      gap: 10px;
+     align-items: end;
 }
-.menu-side .name{
+aside .sidebar .menu-side .name{
      color: var(--white-text-color);
-     font-size: 18px;
+     font-size: 15px;
      font-weight: 700;
 }
-.menu-side .icons{
+aside .sidebar .menu-side .icons{
      color: var(--white-text-color);
-     font-size: 18px;
+     font-size: 20px;
      font-weight: 700;
+}
+
+aside .sidebar .box_userdetail {
+background-color: var(--bg-black-color);
+height: 100px;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 15px;
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+padding: 10px;
+margin: 10px 0px;
+
+}
+aside .sidebar .box_userdetail .avtar{
+     
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+aside .sidebar .in_and-out{
+     position: absolute;
+     right: -25px;
+     top: 50px;
+     cursor: pointer;
+}
+.sidebar .in_and-out .icon{
+background-color: var(--main-bg-color);
+width: 40px;
+height: 40px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 20px;
+font-family: cursive;
+}
+
+.sidebar.active .in_and-out .icon {
+transform: rotate(180deg);
+}
+.sidebar.active .in_and-out{
+right: -30px;
+}
+main .wrapper_content{
+     transition: all 0.4s ease-in-out;
+     padding-left: 200px;
+     padding-top: 100px;
+     
+}
+main .wrapper_content.active{
+     padding-left: 0px;
+ 
+} 
+
+
+/* this is footer authadmin */
+
+.authorize {
+     background-color: var(--main-bg-color);
+     padding: 10px;
+     /* position: absolute;
+     top: 100%;
+     width: 100%;
+     z-index: -2; */
+}
+
+.authorize .fotr{
+     color: var(--white-text-color);
+     font-weight: 700;
+     font-size: 20px;
+     text-align: center;
+     text-transform: capitalize;
+     font-family: cursive;
+}
+
+
+
+/* global css */
+
+.table_heading{
+     color: var(--main-bg-color);
+     font-weight: 700;
+     font-size: 30px;
+     text-transform: capitalize;
+     font-family: var(--font-family);
+     text-align: center;
+     
+     border-bottom: 2px solid var(--main-bg-color);
+     padding-bottom: 10px;
+     border-radius: 1px;
+}
+
+.table>thead tr th{
+     text-transform: capitalize;
+     font-weight: 700;
+     font-family: var(--font-family);
+     color: var(--main-bg-color);
+}
+.btn.btn_main.btn_form{
+     width: 100%;
+     text-transform: capitalize;
+     font-weight: 700;
+     font-size: 20px;
+     font-family: var(--font-family);
+ }
+ .btn.btn_main.btn_form:hover{
+     background-color: var(--bg-black-color);
+     color: var(--white-text-color);
+     border-color: var(--bg-black-color);
+ }
+.img_table{
+     width: 100%;
+     height: 100px;
+}
+#textarea{
+     min-height: 200px;
+     height: 200px;
+}
+.form-label{
+     text-transform: capitalize;
+     color: var(--dark-text-color);
+     font-weight: 700;
+}
+.form-control{
+     font-family: var(--font-family);
+     text-transform: capitalize;
+     color: var(--bg-black-color);
+}
+.btn-close{
+     background-color: var(--main-bg-color);
+     color: #fff !important;
+     font-family: cursive;
+     width: 30px;
+     height: 30px;
+     border-radius: 50%;
+     opacity: 1 !important;
+}
+.modal-header{
+     border-bottom: transparent !important;
+}
+.dropdown-item{
+     text-transform: capitalize;
+     font-family: var(--font-family);
+     font-weight: 500;
+     color: var(--dark-text-color);
+}
+.dropdown-item:focus{
+     background-color:var(--border) !important;
+     color: var(--dark-text-color) !important;
+}
+.page-item.active .page-link{
+     background-color: var(--main-bg-color);
+     color: var(--white-text-color);
+     font-family: cursive;
+     font-weight: 500;
+     border-color:var(--border) ;
+}
+.page-item{
+     border-color:var(--border) ;
+  
+}
+.page-link{
+     color: var(--dark-text-color);
+     cursor: pointer;
+}
+.page-link:hover{
+     color: var(--dark-text-color);
+}
+/* extra css of admin area */
+
+.dashbord_sec{
+     text-transform: capitalize;
+}
+
+#dashbord .actions .dropdown{
+     position: relative;
+     transition: all 0.4s;
+}
+
+#dashbord .actions .dropdown .menu_drop_down{
+     transform: translateY(-20px);
+     transition: all 0.4s;
+}
+#dashbord .actions .dropdown .menu_drop_down.active{
+     transform: translateY(0px);
+}
+#dashbord .actions .dropdown .menu_drop_down.active .orderlist{
+     position: absolute;
+     top: 0;
+     left: 0;
+     display: block;
+     background-color:var(--white-text-color);
+     color: var(--main-bg-color);
+     border: 1px solid var(--border);
+     padding: 20px;
+     border-radius: 15px;
+     box-shadow: var(--box-shadow);
+}
+.menu_drop_down .orderlist{
+    
+     display: none;
+}
+
+#dashbord .actions .dropdown .menu_drop_down .orderlist li a{
+     color: var(--main-bg-color);
+     font-weight: 500;
+     font-family: var(--font-family);
+     padding: 10px 0px;
+}
+
+.dashbord_sec  .dropdown-menu.show{
+box-shadow: var(--box-shadow);
+border-color: transparent;
+}
+
+.modal-content .main_btn{
+     display: flex;
+     justify-content: center;
+     gap: 20px;
+}
+
+/* chaart js style */
+.card_wrap .chart{
+  box-sizing: border-box;
+  height: 150px;
+}
+
+.card_wrap .heading_chart{
+     font-family: cursive;
+     text-transform: capitalize;
+     font-weight: 700;
+     font-size: 18px;
+     color: var(--main-bg-color);
 }
